--- a/StockManagement/src/stockmanagement/Stock.form
+++ b/StockManagement/src/stockmanagement/Stock.form
@@ -29,7 +29,6 @@
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="mesajYazisi" alignment="0" min="-2" pref="273" max="-2" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="1" attributes="0">
@@ -45,12 +44,14 @@
                                   <Component id="cbKategori" max="32767" attributes="0"/>
                                   <Component id="tfFiyat" min="-2" pref="156" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace min="-2" pref="68" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="ekleButonu" max="32767" attributes="0"/>
-                                  <Component id="urunGuncelle" max="32767" attributes="0"/>
-                              </Group>
                           </Group>
+                          <Component id="mesajYazisi" alignment="0" min="-2" pref="273" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="ekleButonu" max="32767" attributes="0"/>
+                          <Component id="urunGuncelle" max="32767" attributes="0"/>
+                          <Component id="silButonu" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
@@ -96,7 +97,9 @@
                       <Component id="urunGuncelle" min="-2" pref="29" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
+              <Component id="silButonu" min="-2" pref="35" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="mesajYazisi" min="-2" pref="28" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="261" max="-2" attributes="0"/>
@@ -188,6 +191,9 @@
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="urunTablosuMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -205,6 +211,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="urunGuncelleActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="silButonu">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="&#xdc;r&#xfc;n sil"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="silButonuActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
